--- a/static/style.css
+++ b/static/style.css
@@ -7,50 +7,23 @@ body {
     background-size:contain; 
 }
 
-
-
-.bgImage {
-    background-image: url("/static/images/food-blk.png");
-    background-color: #f7c225;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: right; 
-    background-size:contain;
+#home {
+  font-family: 'Courier New', Courier, monospace;
 }
+
+.jumbotron {
+  background-color: #c6d3c2;
+}
+
 
 .navbar-brand {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
 
-
-#welcome {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    position: absolute;
-    height: 70%;
-    left: 30%;
-    top: 52%;
-    transform: translate(-50%, -50%);      
-    border-radius: 20px;
-    /* box-shadow: 5px 10px; */
-    background-image: url("/static/images/logo.png");
-    background-repeat: no-repeat;
-    /* background-attachment: fixed; */
-    background-position: 50% 90%;
-    background-size: 50%;
-    opacity: 0.7;
-    background-color: #9D9986;
-    /* border: 2px solid #9D9986; */
+#login {
+  opacity: 0.65;
 }
-
-/* #planImg {
-    width:200px;
-    position: fixed;    
-    left: 6%;
-    bottom: 6%;
-} */
-
 
 #filters {
     background-color: white;
@@ -72,9 +45,60 @@ body {
     text-decoration: underline;
 }
 
-#recTitle {
+.title {
   color: #424446;
 }
+
+
+.addToMealPlanBtn, .backToMealPlanBtn {
+  color: white;
+}
+
+
+
+#mpTbody div {
+  line-height: normal;
+}
+
+table{
+  table-layout: fixed;
+  width: 100%; 
+  border-radius: 10px; 
+}
+
+.trash {
+    background-color: transparent;
+    border: none;
+}
+
+tr {
+   line-height: 60px;
+   min-height: 60px;
+   height: 60px;   
+}
+
+td {
+  font-size: 13px;
+  background-color: red; 
+}
+
+a {
+  color: black;
+}
+
+
+#loader {
+  display: none;
+  margin: 10% auto;
+  border: 12px solid #f3f3f3; 
+  border-top: 12px solid #909091; 
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
 
 /* @media screen and (max-width: 576px) {
   body {
@@ -88,24 +112,6 @@ body {
     margin: 8px auto;
   }
 } */
-
-.trash {
-    background-color: transparent;
-    border: none;
-}
-
-
-#loader {
-  display: none;
-  margin: 10% auto;
-  border: 15px dotted white;
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-}
-
 
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate(0deg); }
