--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="/">
                 <i class="fas fa-utensils mr-3"></i>               
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="{{url_for('homepage')}}">Home <span class="sr-only">(current)</span></a>
                     </li>                   
                     <li class="nav-item mr-3">
-                        <a id="catNav" class="nav-link" href="#">Categories</a>                       
+                        <a id="catNav" type="button" class="nav-link" href="#">Categories</a>                       
                     </li>
                     <li class="nav-item mr-3">
                         <a id="recNav" class="nav-link" href="#">Recipes</a>
@@ -39,10 +39,10 @@
                         <a id="likesNav" class="nav-link" href="#">Favorite Recipes</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a class="nav-link" href="{{url_for('list_diy_recipes')}}">DIY Recipes</a>
+                        <a id="diyNav" class="nav-link" href="#">DIY Recipes</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a class="nav-link" href="#">My Meal Plan</a>
+                        <a id="mealPlanNav" class="nav-link" href="#">My Meal Plan</a>
                     </li>    
                     {% endif %}           
                 </div>
