fix pressing enter key to submit the search form

--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
                         <div class="input-group mb-3">
                             <input type="text" name="rSearch" id="rSearch" class="form-control text-center" placeholder="Key word of the recipe">
                             <div class="input-group-append">
-                                <button class="btn btn-info" type="button">Search</button>
+                                <button id="searchBtn" class="btn btn-info">Search</button>
                             </div>
                         </div>
                     </form>
