--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Plan Your Meals</title>
+    <title>Meal Joy</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">   
@@ -16,8 +16,8 @@
 <body>    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/">
-                <i class="fas fa-utensils mr-3"></i>               
+            <a class="navbar-brand mr-5" href="/">
+                <i class="fas fa-utensils"></i> Meal Joy               
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,19 +30,19 @@
                         <a class="nav-link" href="{{url_for('homepage')}}">Home <span class="sr-only">(current)</span></a>
                     </li>                   
                     <li class="nav-item mr-3">
-                        <a id="catNav" type="button" class="nav-link" href="#">Categories</a>                       
+                        <a id="catNav" type="button" class="nav-link" href="#categories">Categories</a>                       
                     </li>
                     <li class="nav-item mr-3">
-                        <a id="recNav" class="nav-link" href="#">Recipes</a>
+                        <a id="recNav" class="nav-link" href="#recipes">Recipes</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a id="likesNav" class="nav-link" href="#">Favorite Recipes</a>
+                        <a id="likesNav" class="nav-link" href="#favorite">Favorite Recipes</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a id="diyNav" class="nav-link" href="#">DIY Recipes</a>
+                        <a id="diyNav" class="nav-link" href="#diy-recipes">DIY Recipes</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a id="mealPlanNav" class="nav-link" href="#">My Meal Plan</a>
+                        <a id="mealPlanNav" class="nav-link" href="#meal-plan">My Meal Plan</a>
                     </li>    
                     {% endif %}           
                 </div>
