--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -9,7 +9,7 @@
             {{ form.hidden_tag() }}
 
             {% for field in form if field.widget.input_type != 'hidden' %}            
-                <b>{{field.label}}</b>
+                <b class="d-block mt-4">{{field.label}}</b>
                 {{ field(placeholder=field.label.text, class_="form-control") }}
 
                 {% for error in field.errors %}
