--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -12,8 +12,8 @@ background-size:contain;
 
 {% block content %}
 
-<div class="row mt-5">
-    <div class="col-md-7 col-lg-5 offset-1">
+<div class="auth row d-flex justify-content-center">
+    <div class="col-md-7 col-lg-5 mt-5">
         <h2 class="text-center">Login</h2>
 
         <form method="POST" id="user_form">
