--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<div class="row mt-5">
-    <div class="col-md-7 col-lg-5 offset-1">
+<div class="auth row d-flex justify-content-center">
+    <div class="col-md-7 col-lg-5 mt-5">
         <h2 class="text-center">Sign Up</h2>
         <form method="POST" id="user_form">
             {{ form.hidden_tag() }}
