--- a/static/style.css
+++ b/static/style.css
@@ -8,8 +8,8 @@ body {
 
 .contentArea {
   background-color: #A9C28D;
-  opacity: 0.95;
-  /* height: 100%; */
+  /* opacity: 0.95; */ 
+  /* this will cause the modal disabled */
 }
 
 .auth {
